<resources>
    <string name="app_name">ACCS2</string>
    <string name="title_home">云端</string>
    <string name="title_dashboard">监控</string>
    <string name="title_notifications">用户</string>
    <string name="cloudpihao">批号：</string>
    <string name="clouddaici">代次：</string>
    <string name="cloudhuanyeshijian">换液时间：</string>
    <string name="cloudchuandaishijian">传代时间：</string>
    <string name="cloudpeiyangshijian">培养时间：</string>
    <string name="xibaobianhao">细胞编号：</string>
    <string name="xibaomingcheng">细胞名称：</string>
    <string name="cloudbuttonjainsuo">检 索</string>
    <string name="xibaoshuliang">细胞数量：</string>
    <string name="fugailv">覆盖比率：</string>
    <string name="chuandaibili">传代比例：</string>
    <string name="beizhu">备注：</string>
    <string name="peiyangshijian">培养时间：</string>
    <string name="buffering">缓冲中</string>
    <string name="cell_name">细胞名称</string>
    <string name="generation_time">传代时间</string>
    <string name="incubation_time">培养时间</string>
    <string name="the_time_of_changing_liquid">换液时间</string>
    <string name="image">图片</string>
    <string name="device_num">设备1</string>
    <string name="bounded_devices">已绑设备</string>
    <string name="setting">设置</string>
    <string name="username">用户名:</string>
    <string name="username_admin">admin</string>
    <string name="login">登录</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="logout">退出登录</string>
    <string name="change_account">切换账号</string>
    <string name="culbator_params">培养箱参数</string>
    <string name="temperature_setting">温度设定值</string>
    <string name="temperature_current">温度当前值</string>
    <string name="co2_setting">CO2设定值</string>
    <string name="co2_current">CO₂当前值</string>
    <string name="humidity_percent">湿度百分比</string>
    <string name="isRemember">记住密码</string>
    <string name="isAuto">自动登录</string>
</resources>
