<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp"
    android:paddingStart="2dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/cloueitem_xibaomingcheng"
        style="@style/CloudItemItem"
        android:text="@string/cell_name"
        />

    <TextView
        android:id="@+id/cloueitem_chuandaishijian"
        style="@style/CloudItemItem"
        android:text="@string/generation_time"
        />

    <TextView
        android:id="@+id/cloueitem_peiyangshijian"
        style="@style/CloudItemItem"
        android:text="@string/incubation_time"
        />

    <TextView
        android:id="@+id/cloueitem_xibaohuanyeshijian"
        style="@style/CloudItemItem"
        android:text="@string/the_time_of_changing_liquid"
       />

    <ImageView
        android:id="@+id/cloueitem_tupian"

        android:src="@drawable/pic"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:layout_gravity="center_vertical"
        android:paddingStart="10dp"

        tools:ignore="ContentDescription"/>
</LinearLayout>