<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/cloud_cellname2"
            style="@style/CloudStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/xibaomingcheng"
            app:layout_constraintRight_toLeftOf="@+id/cloud_cellname_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.225"/>

        <EditText
            android:id="@+id/cloud_cellname_et"
            style="@style/CloudStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:background="@drawable/cloud_rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toRightOf="@+id/cloud_cellname2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.675"
            />

        <TextView
            android:id="@+id/cloud_xibaobianhao"
            style="@style/CloudStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/xibaobianhao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/cloud_xibaobianhao_et"
            app:layout_constraintTop_toBottomOf="@+id/cloud_cellname2"/>

        <EditText
            android:id="@+id/cloud_xibaobianhao_et"
            style="@style/CloudStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/cloud_rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toEndOf="@+id/cloud_xibaobianhao"
            app:layout_constraintTop_toBottomOf="@+id/cloud_cellname_et"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.675"/>

        <TextView
            android:id="@+id/cloud_pihao"
            style="@style/CloudStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/cloudpihao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cloud_xibaobianhao"
            app:layout_constraintRight_toLeftOf="@+id/cloud_pihao_et"
            />

        <EditText
            android:id="@+id/cloud_pihao_et"
            style="@style/CloudStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/cloud_rectangle"
            app:layout_constraintLeft_toRightOf="@+id/cloud_pihao"
            app:layout_constraintRight_toLeftOf="@+id/cloud_daici"
            app:layout_constraintTop_toBottomOf="@+id/cloud_xibaobianhao_et"/>

        <TextView
            android:id="@+id/cloud_daici"
            style="@style/CloudStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/clouddaici"
            app:layout_constraintStart_toEndOf="@+id/cloud_pihao_et"
            app:layout_constraintRight_toLeftOf="@+id/cloud_daici_et"
            app:layout_constraintTop_toBottomOf="@+id/cloud_xibaobianhao_et"/>

        <EditText
            android:id="@+id/cloud_daici_et"
            style="@style/CloudStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/cloud_rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cloud_daici"
            app:layout_constraintTop_toBottomOf="@+id/cloud_xibaobianhao_et"/>


        <TextView
            android:id="@+id/cloud_peiyangshijian"
            style="@style/CloudStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/cloudpeiyangshijian"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cloud_pihao"/>

        <TextView
            android:id="@+id/cloud_peiyangshijian_tv"
            style="@style/CloudStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/cloud_rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cloud_peiyangshijian"
            app:layout_constraintTop_toBottomOf="@+id/cloud_daici_et"/>

        <Button
            android:id="@+id/btn_clear_peiyangshijian"
            android:layout_width="25dp"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            android:background="@android:drawable/ic_menu_close_clear_cancel"
            app:layout_constraintBottom_toBottomOf="@+id/cloud_peiyangshijian_tv"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/cloud_peiyangshijian_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cloud_peiyangshijian_tv"
            app:layout_constraintVertical_bias="0.5"/>

        <TextView
            android:id="@+id/cloud_chuandaishijian"
            style="@style/CloudStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cloudchuandaishijian"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cloud_peiyangshijian"/>

        <TextView
            android:id="@+id/cloud_chuandaishijian_tv"
            style="@style/CloudStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/cloud_rectangle"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cloud_chuandaishijian"
            app:layout_constraintTop_toBottomOf="@+id/cloud_peiyangshijian_tv"/>


        <Button
            android:id="@+id/btn_clear_chuandaishijian"
            android:layout_width="25dp"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            android:background="@android:drawable/ic_menu_close_clear_cancel"
            app:layout_constraintBottom_toBottomOf="@+id/cloud_chuandaishijian_tv"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/cloud_chuandaishijian_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cloud_chuandaishijian_tv"
            app:layout_constraintVertical_bias="0.5"
            />

        <TextView
            android:id="@+id/cloud_huanyeshijian"
            style="@style/CloudStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="2"
            android:text="@string/cloudhuanyeshijian"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cloud_chuandaishijian"/>

        <TextView
            android:id="@+id/cloud_huanyeshijian_tv"
            style="@style/CloudStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/cloud_rectangle"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cloud_huanyeshijian"
            app:layout_constraintTop_toBottomOf="@+id/cloud_chuandaishijian_tv"
            app:layout_constraintVertical_bias="0.453"/>

        <Button
            android:id="@+id/btn_clear_huanyeshijian"
            android:layout_width="25dp"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            android:background="@android:drawable/ic_menu_close_clear_cancel"
            app:layout_constraintBottom_toBottomOf="@+id/cloud_huanyeshijian_tv"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/cloud_huanyeshijian_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cloud_huanyeshijian_tv"
            app:layout_constraintVertical_bias="0.5"
            />
    </android.support.constraint.ConstraintLayout>




    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/cloud_btn_search"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:background="@drawable/cloud_btn_search_selector"
            android:text="@string/cloudbuttonjainsuo"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.875"
            />
    </android.support.constraint.ConstraintLayout>


</LinearLayout>